clean up warnings (#1269)
* warnings in sdo, moxy, dbws
* add override ann
* remove redundant casts, inheritdoc

Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>